[package]
name = "restaurant_jolah"
version = "0.1.0"
edition = "2021"
authors = ["Jolah <jokunlade@gmail.com>"]
description = "A reusable restaurant library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jolah1/restaurant"
readme = "README.md"
keywords = ["example", "rust", "library"]
categories = ["development-tools", "education"]

[dependencies]
